crates/ui/tests/snapshots/panel_snapshots__audit_screen__default_recent_24h.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 684
expression: audit_screen_summary(&c)
---
screen: audit
title: Audit journal
filter: venues= symbol=— kind=All time_range=Last7D
page: 0 total: 8
rows:
  fixture-row-0000 binance BTCUSDT Fill buy 0.00 BTCUSDT @ 50000 btc_macd_trend
  fixture-row-0001 coinbase ETHUSDT StrategyEvent registry:StrategyLoaded:btc_macd_trend btc_rsi_reversion
  fixture-row-0002 kraken SOLUSDT Reconciliation reconcile delta=2 —
  fixture-row-0003 binance — Fill buy 0.03 BTCUSDT @ 50000 btc_macd_trend
  fixture-row-0004 coinbase BTCUSDT StrategyEvent registry:StrategyLoaded:btc_macd_trend btc_rsi_reversion
  fixture-row-0005 kraken ETHUSDT Reconciliation reconcile delta=5 —
  fixture-row-0006 binance SOLUSDT Fill buy 0.06 SOLUSDT @ 50000 btc_macd_trend
  fixture-row-0007 coinbase — StrategyEvent registry:StrategyLoaded:btc_macd_trend btc_rsi_reversion
