crates/ui/tests/snapshots/panel_snapshots__audit_screen__filter_no_match.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 694
expression: audit_screen_summary(&c)
---
screen: audit
title: Audit journal
filter: venues= symbol=— kind=All time_range=Last7D
page: 0 total: 0
copy: No journal rows match these filters
